# NetProwl

./: .gitignore  CLAUDE.md  README.md  core.go  package.json  roadmap.md
.github/workflows/: bump-homebrew.yml  feature-completeness.yml  netprowl-mini.yml  netprowl-pc.yml  reliability-loop.yml  rs-core.yml
.superpowers/brainstorm/4561-1778494973/content/: design.html  device-detail.html  device-icons.html  topology-layout.html  waiting.html
.superpowers/brainstorm/4561-1778494973/state/: server-stopped
cloud/: config.go  deepseek.go  go.mod  server.go
core/: Cargo.toml  go.mod
core/cmd/cli/: main.go
core/scanner/: banner.go  discovery.go  mdns.go  registry.go  scanner.go  ssdp.go  tcp.go
core/src/: lib.rs  main.rs  scanner.rs  types.rs  wasm.rs
core/src/scanner/: banner.rs  mdns.rs  mod.rs  registry.rs  ssdp.rs  tcp.rs
core/src/util/: ip.rs  mod.rs  oui.rs
core/types/: types.go
core/util/: codec.go  ip.go  oui.go
docker/: Dockerfile.cloud  docker-compose.yml
docs/: integration-test.md
docs/superpowers/analysis/: 2026-05-14-netprowl-status-and-roadmap.md
docs/superpowers/plans/: 2025-05-11-probe-agent-implementation-plan.md  2026-05-11-netprowl-core-plan.md  2026-05-11-netprowl-core.md  2026-05-11-netprowl-mvp-plan.md  2026-05-11-netprowl-phase1-mvp-plan.md  2026-05-11-netprowl-skeleton-plan.md  2026-05-12-docker-support-plan.md  2026-05-12-go-to-rust-migration.md  2026-05-12-netprowl-pc.md  2026-05-12-rust-core-migration-plan.md  2026-05-12-tool-pipeline-plan.md  2026-05-13-phase2-ai-banner-plan.md  2026-05-13-phase2-creds-unauth-plan.md  2026-05-13-phase2-eos-firmware-plan.md  2026-05-13-phase2-fingerprint-cve-plan.md  2026-05-13-phase3-attack-chain-plan.md  2026-05-13-report-export-plan.md  2026-05-13-scan-history-plan.md  2026-05-13-tls-audit-plan.md  2026-05-14-remaining-tasks-plan.md
docs/superpowers/specs/: 2025-05-11-probe-agent-design.md  2026-05-11-netprowl-mvp-design.md  2026-05-11-netprowl-phase1-design.md  2026-05-11-netprowl-phase1-mvp-design.md  2026-05-11-netprowl-skeleton-design.md  2026-05-12-rust-core-migration-design.md  2026-05-12-tool-pipeline-design.md  2026-05-13-pc-client-phase1-status.md  2026-05-13-report-export-design.md  2026-05-13-scan-history-design.md  2026-05-13-tls-audit-design.md
homebrew-tap/: README.md
homebrew-tap/Formula/: netprowl.rb
netprowl-agent/: Cargo.toml  Makefile  config.yaml  go.mod
netprowl-agent/src/: cache.rs  main.rs  mdns.rs  scanner.rs  server.rs  types.rs
netprowl-mini/: babel.config.js  package.json  project.config.json  tsconfig.json
netprowl-mini/config/: index.ts  prod.ts
netprowl-mini/src/: app.config.ts  app.css  app.ts
netprowl-mini/src/components/: DeviceCard.css  DeviceCard.tsx  ScanButton.css  ScanButton.tsx  TopoCanvas.css  TopoCanvas.tsx
netprowl-mini/src/components/DeviceCard/: index.css  index.tsx
netprowl-mini/src/components/ScanButton/: index.css  (+1 more)
netprowl-mini/src/services/: mdns.ts  network.ts  scanner.ts  ssdp.ts  storage.ts  tcp.ts  udp.ts
netprowl-mini/src/stores/: deviceStore.ts
netprowl-mini/src/types/: index.ts
netprowl-mini/src/wasm/: netprowl_core.ts
netprowl-mini/src/wasm_pkg/: rs_core.d.ts  rs_core.js  rs_core_bg.wasm
netprowl-pc/: Dockerfile  README.md  docker-compose.yml  index.html  install.sh  package-lock.json  package.json  tsconfig.json
netprowl-pc/src/: App.css  App.tsx  index.css
netprowl-pc/src-tauri/: Cargo.toml  tauri.conf.json
netprowl-pc/src-tauri/scanner/: banner.rs  ip.rs  mdns.rs  oui.rs  ssdp.rs  tcp.rs
netprowl-pc/src-tauri/src/: ai_commands.rs  commands.rs  lib.rs  main.rs  pipeline.rs  recon_commands.rs  report.rs  report_commands.rs  tls_vuln_rules.json  tool_commands.rs
netprowl-pc/src-tauri/src/history/: mod.rs  schema.rs
netprowl-pc/src-tauri/src/scanner/: banner.rs  ip.rs  mdns.rs  mod.rs  os_fingerprint.rs  oui.rs  registry.rs  ssdp.rs  tcp.rs  tool_discovery.rs
netprowl-pc/src-tauri/src/tls/: cert.rs  config.rs  headers.rs  mod.rs  rules.rs  testssl.rs
netprowl-pc/src/components/: AIResultsPanel.tsx  DeviceCard.tsx  ExportPanel.tsx  HistoryDetail.tsx  HistoryDrawer.tsx  HistoryListItem.tsx  PipelinePanel.tsx  PrintReport.tsx  ReconPanel.tsx  TLSResultPanel.tsx  ToolStatusBar.tsx  TopoCanvas.tsx  UnifiedResultsPanel.tsx
netprowl-pc/src/hooks/: useScanner.ts
netprowl-pc/src/pages/: Devices.tsx  Home.tsx  ScanPage.tsx  Topology.tsx
netprowl-pc/src/stores/: configStore.ts  deviceStore.ts  historyStore.ts  pipelineStore.ts
probe-agent/: agent.go  config.go  go.mod  main.go  mdns.go  probe-agent  scanner.go  websocket.go
rs-core/: Cargo.toml
rs-core/src/: banner.rs  consts.rs  ip.rs  lib.rs  mdns.rs  oui.rs  registry.rs  ssdp.rs  tcp.rs  types.rs
rs-core/src/ai/: attack_chain.rs  banner_parse.rs  banner_parser.rs  diagnosis.rs  fix_suggest.rs  mod.rs
rs-core/src/cve/: db.rs  mod.rs  types.rs
rs-core/src/recon/: dns.rs  http_audit.rs  mod.rs  shodan.rs  threat_intel.rs  waf.rs  web_vuln.rs
rs-core/src/scanner/: banner.rs  mdns.rs  mod.rs  registry.rs  ssdp.rs  tcp.rs
rs-core/src/security/: credentials.rs  default_creds.rs  eos_db.rs  firmware.rs  http_auth.rs  mod.rs  report.rs  tls_audit.rs  unauthorized.rs
rs-core/src/util/: mod.rs
scripts/: feature-completeness-loop.sh  mini-build-loop.sh  post-build-macos.sh  reliability-loop.sh  roadmap-readme-code-review-loop.sh
src/: app.config.ts  app.css  app.ts
src/components/PortList/: index.css  index.tsx
src/components/ScanButton/: index.css  index.tsx
src/components/icons/: index.tsx
src/services/: mdns.ts  network.ts  scanner.ts  storage.ts  tcp.ts  udp.ts
src/types/: index.ts
src/utils/: gzip.ts  ip.ts  oui.ts
(+17 files in other folders)
