[package]
name = "netprowl-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1", features = ["attributes"] }

[profile.release]
opt-level = "s"
lto = true
