[package]
name = "netprowl-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
regex = "1"
once_cell = "1"

[profile.release]
opt-level = "s"
lto = true