[package]
name = "netprowl-agent"
version = "0.1.0"
edition = "2021"
description = "NetProwl Probe Agent — LAN scanner with WebSocket streaming"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "s"
lto = true
strip = true
