[package]
name = "rs-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
once_cell = "1"

# 并发
wasm-bindgen-futures = "0.4"
futures-util = "0.3"

# 工具
lazy_static = "1"
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
wasm-pack = "0.13"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
