[package]
name = "rs-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
once_cell = "1"

# 并发
wasm-bindgen-futures = "0.4"
futures-util = "0.3"

# 工具
lazy_static = "1"
regex = "1"
chrono = "0.4"
base64 = "0.21"
serde_json = "1"
urlencoding = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
trust-dns-resolver = "0.23"

[dev-dependencies]
wasm-pack = "0.13"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
