[package]
name = "netprowl-pc"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# 网络
dns-parser = "0.8"
local-ip-address = "0.6"

# Rust Core
netprowl-core = { path = "../../core" }

# 并发限流
governor = "0.7"

# TLS
rustls = "0.23"
x509-parser = "0.16"
sha2 = "0.10"

# 工具
regex = "1"
chrono = "0.4"
lazy_static = "1"
base16 = "0.2"
which = "4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
